[metadata]
## Setuptools specific information
name = pydoer
description = A CLI application automating spawning of terminals and executing commands in them.
version = 0.6.1
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GNU GPLv3
license_files = LICENSE, Pretrained_Model_LICENSE.txt
platforms = Linux
author = Konstantinos Lampridis
author_email = k.lampridis@hotmail.com

download_url = https://github.com/boromir674/doer/archive/v0.6.1.tar.gz

## PyPi specific information

# tags for pypi
keywords = automation, cli, terminal, python, bash

# represents the web home page of the project as a link on pypi
url = https://github.com/boromir674/doer

# represent other relevant and usefull websites of the project as links on pypi
project_urls =
    Bug Tracker = https://github.com/boromir674/doer/issues
    Source Code = https://github.com/boromir674/doer

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Topic :: Utilities
    Topic :: Home Automation
    Typing :: Typed


[options]
url = https://github.com/boromir674/doer
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    console-menu~=0.6.0
    attrs~=21.2.0
    click~=8.0.1
    software-patterns~=1.0.0
tests_require = pytest


[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pydoer = pydoer.cli:menu


#### SUPORT TOOLS CONFIG
[flake8]
max_line_length = 120
exclude = .tox,venv

[tools:pytest]
python_files = tests/test_*.py tests/* */test_*.py

[isort]
line_length = 120
skip = .tox,venv,src/pydoer/__init__
default_section = THIRDPARTY
known_first_party = src,tests


[check-manifest]
ignore =
    requirements/*
    scripts/*.py
    tox.ini
    .circleci/config.yml
    .travis.yml
    .bettercodehub.yml
    .scrutinizer.yml
    .coveragerc
    .gitignore
    .pylintrc
    .prospector.yml
    .DS_Store
    CHANGELOG.rst
    menu_entries.json
    tests/*
    tests/data/wrong_menu_design
    tests/data/correct_menu_design/menu.json
    tests/data/correct_menu_design/options/*.json
