[metadata]
description = A CLI application automating spawning of terminals and executing commands in them.
long_description = file: README.rst
keywords = automation, terminal, spawn
license = GNU GPLv3

[options]
url = https://github.com/boromir674/doer
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
tests_require = pytest
install_requires =
    attrs~=21.2.0
    click~=8.0.1
    console_menu~=0.6.0


[options.packages.find]
where=src

#### SUPORT TOOLS CONFIG
[flake8]
max_line_length = 120
exclude = .tox,venv

[tools:pytest]
python_files = tests/test_*.py tests/* */test_*.py

[isort]
line_length = 120
skip = .tox,venv,src/pydoer/__init__
default_section = THIRDPARTY
known_first_party = src,tests


[check-manifest]
ignore =
    .travis.yml
    .DS_Store
    scripts/*.py
    .bettercodehub.yml
    .scrutinizer.yml
